test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/cfg_attr_program_type.sw
// This test proves that https://github.com/FuelLabs/sway/issues/6981 is fixed.
library;

#[cfg(program_type)]
pub fn not_ok() {}